# CS50X

./: .gitignore  CMakeLists.txt  README.md
src/Week-1/Lecture/: agree.c  calculator.c  compare.c  hello.c  mario.c  meow.c  name.c
src/Week-1/ProblemSet-1/: cash.c  credit.c  helloitsme.c  mario-less.c  mario-more.c
src/Week-1/Section/: contacts.c  pyramid.c
src/Week-2/Lecture/: length.c  scores.c  string.c  uppercase.c
src/Week-2/ProblemSet-2/: caesar.c  readability.c  scrabble.c  substitution.c
src/Week-2/Section/: alphabetical.c  double.c
src/Week-2/Shorts/: triangle.c
src/Week-3/Lecture/: phonebook.c  recursion.c  search.c
src/Week-3/ProblemSet-3/: plurality.c  sort.txt
src/Week-3/Section/: factorial.c  search.c
src/Week-4/Lecture/: addresses2.c  copy.c  garbage.c  get.c  memory.c  phonebook.c  swap.c
